--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   image_picker: ^0.8.6
+  path_provider: ^2.0.8
+
 
 dev_dependencies:
   flutter_test:
