--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
+  provider: ^6.0.3
+  flutter_image_compress: ^1.0.0-nullsafety
   image_picker: ^0.8.6
   path_provider: ^2.0.8
+
 
 
 dev_dependencies:
