--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.3
   flutter_image_compress: ^1.0.0-nullsafety
   image_picker: ^0.8.6
+  image: ^3.1.0
   path_provider: ^2.0.8
 
 
