--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,14 @@ dependencies:
   image_picker: ^0.8.6
   image: ^3.1.0
   path_provider: ^2.0.8
+  flutter_redux: ^0.10.0
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
