--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   image: ^3.1.0
   path_provider: ^2.0.8
   flutter_redux: ^0.10.0
+  receive_sharing_intent: ^1.4.5
+  mime: ^1.0.0
 
 
 
@@ -73,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/images/
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
